# they-couldve-met

./: LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: docker.yml
backend/: Cargo.toml  Dockerfile  sparql-query
backend/api-server/: Cargo.toml
backend/api-server/src/: api.rs  auth.rs  main.rs
backend/people-database/: Cargo.toml
backend/people-database/migrations/2022-07-22-225245_create_people/: up.sql
backend/people-database/migrations/2022-08-05-161443_create_users/: up.sql
backend/people-database/src/: lib.rs  models.rs  schema.rs
backend/wikipedia-scraper/: Cargo.toml  sparql-query
backend/wikipedia-scraper/src/: main.rs  response_handler.rs
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/components/: FieldChanger.tsx  Layout.tsx  Navbar.tsx  PersonCard.tsx  SearchBar.tsx
frontend/pages/: _admin.tsx  _app.tsx  about.tsx  index.tsx
frontend/styles/: Navbar.module.css  PersonCard.module.css  globals.css
frontend/utils/: person.ts
