[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"]}
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
people-database = {path = "../people-database"}
serde = {version = "1.0", features = ["derive"]}
actix-cors = {version = "0.6"}